Fix bug on mobile device of small size screen
adjustment:
1. height: auto & 100vh
2. padding-top
3. line-height

addition:
1. show border while hovering

--- a/public_html/bt.css
+++ b/public_html/bt.css
@@ -1,14 +1,14 @@
 #content{
     background-color: lightblue;
-    height: 400px;
-    padding: 30px;
+    height: auto;
+    padding: 50px;
 }
 
 #banner, #banner1, #banner2{
     background-attachment: fixed;
     background-position: top;
     width: auto;
-    height: 900px;
+    height: 100vh;
     background-size: cover;
 }
 #banner{
@@ -34,8 +34,7 @@
 .detail:hover{
     transform: scale(1.1);
     opacity: 0.95;
-    border-color: black;
-    border-width: 10px;
+    border: 2px solid gray;
     z-index: 5;
 }
 
